fixed responsiveness on small width

--- a/style.css
+++ b/style.css
@@ -165,3 +165,11 @@ body {
 .gitHubBtn:hover {
     background-color: hsl(0, 0%, 15%);
 }
+
+@media screen and (max-width: 360px) {
+    .container {
+        height: 100%;
+        justify-content: center;
+        padding: 2rem 1rem;
+    }
+}
